--- a/app/main.html
+++ b/app/main.html
@@ -40,52 +40,33 @@
 					<div class="mui-slider-item mui-slider-item-duplicate">
 
 						<ul class="mui-table-view mui-grid-view">
-							<li class="mui-table-view-cell mui-media mui-col-xs-6">
-								<a href="detail.html">
+							<li class="mui-table-view-cell mui-media mui-col-xs-6" id="1" onclick="detail(this.id)">
+								<a href="javascript:;">
 									<img class="mui-media-object" src="../images/shuijiao.jpg">
 									<div class="mui-media-body">幸福就是可以一起睡觉</div>
 								</a>
 							</li>
-							<li class="mui-table-view-cell mui-media mui-col-xs-6">
-								<a href="detail.html">
+							<li class="mui-table-view-cell mui-media mui-col-xs-6" id="2" onclick="detail(this.id)">
+								<a href="javascript:;">
 									<img class="mui-media-object" src="../images/muwu.jpg">
 									<div class="mui-media-body">想要一间这样的木屋，静静的喝咖啡</div>
 								</a>
 							</li>
-							<li class="mui-table-view-cell mui-media mui-col-xs-6">
-								<a href="detail.html"><img class="mui-media-object" src="../images/cbd.jpg">
+							<li class="mui-table-view-cell mui-media mui-col-xs-6" id="3" onclick="detail(this.id)">
+								<a href="javascript:;"><img class="mui-media-object" src="../images/cbd.jpg">
 									<div class="mui-media-body">Color of SIP CBD</div>
 								</a>
 							</li>
-							<li class="mui-table-view-cell mui-media mui-col-xs-6">
-								<a href="detail.html">
+							<li class="mui-table-view-cell mui-media mui-col-xs-6" id="4" onclick="detail(this.id)">
+								<a href="javascript:;">
 									<img class="mui-media-object" src="../images/yuantiao.jpg">
 									<div class="mui-media-body">静静看这世界</div>
-								</a>
-							</li>
-
-							<li class="mui-table-view-cell mui-media mui-col-xs-6">
-								<a href="detail.html">
-									<img class="mui-media-object" src="../images/PSVista.png">
-									<div class="mui-media-body">PSVista</div>
-								</a>
-							</li>
-							<li class="mui-table-view-cell mui-media mui-col-xs-6">
-								<a href="detail.html">
-									<img class="mui-media-object" src="../images/PSVista.png">
-									<div class="mui-media-body">PSVista</div>
-								</a>
-							</li>
-							<li class="mui-table-view-cell mui-media mui-col-xs-6">
-								<a href="detail.html">
-									<img class="mui-media-object" src="../images/MacPro.jpg">
-									<div class="mui-media-body">MacPro</div>
 								</a>
 							</li>
 						</ul>
 					</div>
 
-					<div class="mui-slider-item mui-slider-item-duplicate">
+					<!--<div class="mui-slider-item mui-slider-item-duplicate">
 
 						<ul class="mui-table-view">
 							<li class="mui-table-view-cell mui-media">
@@ -116,28 +97,28 @@
 								</a>
 							</li>
 						</ul>
-					</div>
+					</div>-->
 				</div>
 			</div>
 		</div>
 
 		<!--底部导航条-->
 		<nav class="mui-bar mui-bar-tab">
-			<a class="mui-tab-item mui-active" href="#tabbar">
+			<a class="mui-tab-item mui-active" href="#tabbar" id="home">
 				<span class="mui-icon mui-icon-home"></span>
 				<span class="mui-tab-label">首页</span>
 			</a>
-			<a class="mui-tab-item" href="#tabbar-with-chat">
-				<span class="mui-icon mui-icon-email"><span class="mui-badge">9</span></span>
-				<span class="mui-tab-label">消息</span>
+			<a class="mui-tab-item" href="#tabbar-with-chat" id="gdslogin">
+				<span class="mui-icon mui-icon-paperplane"></span>
+				<span class="mui-tab-label">商品登陆</span>
 			</a>
-			<a class="mui-tab-item" href="#tabbar-with-contact">
-				<span class="mui-icon mui-icon-contact"></span>
-				<span class="mui-tab-label">通讯录</span>
+			<a class="mui-tab-item" href="#tabbar-with-contact" id="chats">
+				<span class="mui-icon mui-icon-chatbubble"><span class="mui-badge">9</span></span>
+				<span class="mui-tab-label">聊天</span>
 			</a>
-			<a class="mui-tab-item" href="#tabbar-with-map">
-				<span class="mui-icon mui-icon-gear"></span>
-				<span class="mui-tab-label">设置</span>
+			<a class="mui-tab-item" href="#tabbar-with-map" id="gdszhuangtai">
+				<span class="mui-icon mui-icon-eye"></span>
+				<span class="mui-tab-label">商品状态</span>
 			</a>
 		</nav>
 	</body>
@@ -146,6 +127,52 @@
 		mui.init({
 			swipeBack: true //启用右滑关闭功能
 		});
+		//首页
+		document.getElementById('home').addEventListener('tap',function(){
+			//打开关于页面
+		  mui.openWindow({
+		    url: 'main.html',
+		    id:'main',
+		  });
+		});
+		//商品登陆
+		document.getElementById('gdslogin').addEventListener('tap',function(){
+			//打开关于页面
+		  mui.openWindow({
+		    url: 'exhibit.html',
+		    id:'exhibit',
+		  });
+		});
+		//聊天
+		document.getElementById('chats').addEventListener('tap',function(){
+			//打开关于页面
+		  mui.openWindow({
+		    url: 'chatView.html',
+		    id:'chatView',
+		  });
+		});
+		//商品状态
+		document.getElementById('gdszhuangtai').addEventListener('tap',function(){
+			//打开关于页面
+		  mui.openWindow({
+		    url: 'request.html',
+		    id:'request',
+		  });
+		});
+		//详情页面
+		function detail(did){
+			//alert(did);
+			mui.openWindow({
+		    url: 'detail.html',
+		    id:'detail',
+		    show: {
+                    autoShow: false
+                },
+		    extras:{
+		      tagertid:did//自定义扩展参数，可以用来处理页面间传值
+		    }
+		  });
+		}
 	</script>
 
 </html>
