--- a/examples/guide.html
+++ b/examples/guide.html
@@ -248,7 +248,10 @@
 			document.getElementById("close").addEventListener('tap', function(event) {
 				plus.storage.setItem("lauchFlag", "true");
 				plus.navigator.setFullscreen(false);
-				plus.webview.currentWebview().close();
+				mui.openWindow({
+					id: 'login',
+					url: '../login/login.html'
+				});
 			}, false);
 			//图片切换时，触发动画
 			document.querySelector('.mui-slider').addEventListener('slide', function(event) {
