--- a/app/main.html
+++ b/app/main.html
@@ -29,9 +29,9 @@
 
 	<body>
 		<header class="mui-bar mui-bar-nav">
+			<a class="mui-icon mui-icon-contact mui-pull-left" id="yonghu"></a>
 			<h1 class="mui-title">商品列表</h1>
 		</header>
-
 		<div class="mui-content" style="background-color:#fff">
 			<h5 style="background-color:#efeff4">慢生活</h5>
 
@@ -65,39 +65,6 @@
 							</li>
 						</ul>
 					</div>
-
-					<!--<div class="mui-slider-item mui-slider-item-duplicate">
-
-						<ul class="mui-table-view">
-							<li class="mui-table-view-cell mui-media">
-								<a href="javascript:;">
-									<img class="mui-media-object mui-pull-left" src="../images/shuijiao.jpg">
-									<div class="mui-media-body">
-										幸福
-										<p class='mui-ellipsis'>能和心爱的人一起睡觉，是件幸福的事情；可是，打呼噜怎么办？</p>
-									</div>
-								</a>
-							</li>
-							<li class="mui-table-view-cell mui-media">
-								<a href="javascript:;">
-									<img class="mui-media-object mui-pull-left" src="../images/muwu.jpg">
-									<div class="mui-media-body">
-										木屋
-										<p class='mui-ellipsis'>想要这样一间小木屋，夏天挫冰吃瓜，冬天围炉取暖.</p>
-									</div>
-								</a>
-							</li>
-							<li class="mui-table-view-cell mui-media">
-								<a href="javascript:;">
-									<img class="mui-media-object mui-pull-left" src="../images/cbd.jpg">
-									<div class="mui-media-body">
-										CBD
-										<p class='mui-ellipsis'>烤炉模式的城，到黄昏，如同打翻的调色盘一般.</p>
-									</div>
-								</a>
-							</li>
-						</ul>
-					</div>-->
 				</div>
 			</div>
 		</div>
@@ -173,6 +140,14 @@
 		    }
 		  });
 		}
+		//用户页面
+		document.getElementById('yonghu').addEventListener('tap',function(){
+			//打开关于页面
+		  mui.openWindow({
+		    url: 'user.html',
+		    id:'user'
+		  });
+		});
 	</script>
 
 </html>
