--- a/login/login.html
+++ b/login/login.html
@@ -124,6 +124,7 @@
 		</div>
 		<script src="js/mui.min.js"></script>
 		<script src="js/mui.enterfocus.js"></script>
+		<script src="js/md5.min.js"></script>
 		<script src="js/app.js"></script>
 		<script>
 			(function($, doc) {
@@ -201,6 +202,8 @@
 									auth.getUserInfo(function() {
 										plus.nativeUI.toast("获取用户信息成功");
 										var name = auth.userInfo.nickname || auth.userInfo.name;
+										console.log("auth user info is ");
+										console.dir(auth.userInfo);
 										app.createState(name, function() {
 											toMain();
 										});
