--- a/login/reg.html
+++ b/login/reg.html
@@ -68,6 +68,7 @@
 			</div>
 		</div>
 		<script src="js/mui.min.js"></script>
+		<script src="js/md5.min.js"></script>
 		<script src="js/app.js"></script>
 		<script>
 			(function($, doc) {
