1.商品状态页面 底部导航条没有反应 底部导航条文字有误 2.商品登陆页面 底部导航条已加

--- a/app/request.html
+++ b/app/request.html
@@ -78,21 +78,21 @@
 		
 		<!--底部导航条-->
 		<nav class="mui-bar mui-bar-tab">
-			<a class="mui-tab-item mui-active" href="#tabbar">
+			<a class="mui-tab-item mui-active" href="#tabbar" id="home">
 				<span class="mui-icon mui-icon-home"></span>
 				<span class="mui-tab-label">首页</span>
 			</a>
-			<a class="mui-tab-item" href="#tabbar-with-chat">
-				<span class="mui-icon mui-icon-email"><span class="mui-badge">9</span></span>
-				<span class="mui-tab-label">消息</span>
+			<a class="mui-tab-item" href="#tabbar-with-chat" id="gdslogin">
+				<span class="mui-icon mui-icon-paperplane"></span>
+				<span class="mui-tab-label">商品登陆</span>
 			</a>
-			<a class="mui-tab-item" href="#tabbar-with-contact">
-				<span class="mui-icon mui-icon-contact"></span>
-				<span class="mui-tab-label">通讯录</span>
+			<a class="mui-tab-item" href="#tabbar-with-contact" id="chats">
+				<span class="mui-icon mui-icon-chatbubble"><span class="mui-badge">9</span></span>
+				<span class="mui-tab-label">聊天</span>
 			</a>
-			<a class="mui-tab-item" href="#tabbar-with-map">
-				<span class="mui-icon mui-icon-gear"></span>
-				<span class="mui-tab-label">设置</span>
+			<a class="mui-tab-item" href="#tabbar-with-map" id="gdszhuangtai">
+				<span class="mui-icon mui-icon-eye"></span>
+				<span class="mui-tab-label">商品状态</span>
 			</a>
 		</nav>
 		
@@ -113,6 +113,38 @@
 					});
 				}
 			});
+			//首页
+		document.getElementById('home').addEventListener('tap',function(){
+			//打开关于页面
+		  mui.openWindow({
+		    url: 'main.html',
+		    id:'main',
+		  });
+		});
+		//商品登陆
+		document.getElementById('gdslogin').addEventListener('tap',function(){
+			//打开关于页面
+		  mui.openWindow({
+		    url: 'exhibit.html',
+		    id:'exhibit',
+		  });
+		});
+		//聊天
+		document.getElementById('chats').addEventListener('tap',function(){
+			//打开关于页面
+		  mui.openWindow({
+		    url: 'chatView.html',
+		    id:'chatView',
+		  });
+		});
+		//商品状态
+		document.getElementById('gdszhuangtai').addEventListener('tap',function(){
+			//打开关于页面
+		  mui.openWindow({
+		    url: 'request.html',
+		    id:'request',
+		  });
+		});
 		</script>
 	</body>
 
