--- a/app/exhibit.html
+++ b/app/exhibit.html
@@ -55,11 +55,11 @@
 		
 		<!--底部导航条-->
 		<nav class="mui-bar mui-bar-tab">
-			<a class="mui-tab-item mui-active" href="#tabbar" id="home">
+			<a class="mui-tab-item" href="#tabbar" id="home">
 				<span class="mui-icon mui-icon-home"></span>
 				<span class="mui-tab-label">首页</span>
 			</a>
-			<a class="mui-tab-item" href="#tabbar-with-chat" id="gdslogin">
+			<a class="mui-tab-item mui-active" href="#tabbar-with-chat" id="gdslogin">
 				<span class="mui-icon mui-icon-paperplane"></span>
 				<span class="mui-tab-label">商品登陆</span>
 			</a>
