--- a/app/main.html
+++ b/app/main.html
@@ -24,70 +24,130 @@
 				margin-top: 8px;
 				color: #333;
 			}
+			/*侧滑的式样*/
+			p {
+				text-indent: 22px;
+			}
+			.mui-off-canvas-left {
+				color: #fff;
+			}
+			.title {
+				margin: 35px 15px 10px;
+			}
+			.title+.content {
+				margin: 10px 15px 35px;
+				color: #bbb;
+				text-indent: 1em;
+				font-size: 14px;
+				line-height: 24px;
+			}
 		</style>
 	</head>
 
 	<body>
-		<header class="mui-bar mui-bar-nav">
-			<a class="mui-icon mui-icon-contact mui-pull-left" id="yonghu"></a>
-			<h1 class="mui-title">商品列表</h1>
-		</header>
-		<div class="mui-content" style="background-color:#fff">
-			<h5 style="background-color:#efeff4">慢生活</h5>
+<div id="offCanvasWrapper" class="mui-off-canvas-wrap mui-draggable">
+			<!--侧滑菜单部分-->
+			<aside id="offCanvasSide" class="mui-off-canvas-left">
+				<div id="offCanvasSideScroll" class="mui-scroll-wrapper">
+					<div class="mui-scroll">
+						<div class="title">侧滑导航</div>
+						<div class="content">
+							这是可拖动式侧滑菜单示例，你可以在这里放置任何内容；关闭侧滑菜单有多种方式： 1.在手机屏幕任意位置向左拖动(drag)；2.点击本侧滑菜单页之外的任意位置; 3.点击如下红色按钮
+							<span class="android-only">；4.Android手机按back键；5.Android手机按menu键
+							</span>。
+							<p style="margin: 10px 15px;">
+								<button id="offCanvasHide" type="button" class="mui-btn mui-btn-danger mui-btn-block" style="padding: 5px 20px;">关闭侧滑菜单</button>
+							</p>
 
-			<div id="slider" class="mui-slider">
-				<div class="mui-slider-group">
-					<div class="mui-slider-item mui-slider-item-duplicate">
-
-						<ul class="mui-table-view mui-grid-view">
-							<li class="mui-table-view-cell mui-media mui-col-xs-6" id="1" onclick="detail(this.id)">
-								<a href="javascript:;">
-									<img class="mui-media-object" src="../images/shuijiao.jpg">
-									<div class="mui-media-body">幸福就是可以一起睡觉</div>
+						</div>
+						<div class="title" style="margin-bottom: 25px;">侧滑列表示例</div>
+						<ul class="mui-table-view mui-table-view-chevron mui-table-view-inverted">
+							<li class="mui-table-view-cell">
+								<a class="mui-navigate-right">
+									Item 1
 								</a>
 							</li>
-							<li class="mui-table-view-cell mui-media mui-col-xs-6" id="2" onclick="detail(this.id)">
-								<a href="javascript:;">
-									<img class="mui-media-object" src="../images/muwu.jpg">
-									<div class="mui-media-body">想要一间这样的木屋，静静的喝咖啡</div>
+							<li class="mui-table-view-cell">
+								<a class="mui-navigate-right">
+									Item 2
 								</a>
 							</li>
-							<li class="mui-table-view-cell mui-media mui-col-xs-6" id="3" onclick="detail(this.id)">
-								<a href="javascript:;"><img class="mui-media-object" src="../images/cbd.jpg">
-									<div class="mui-media-body">Color of SIP CBD</div>
-								</a>
-							</li>
-							<li class="mui-table-view-cell mui-media mui-col-xs-6" id="4" onclick="detail(this.id)">
-								<a href="javascript:;">
-									<img class="mui-media-object" src="../images/yuantiao.jpg">
-									<div class="mui-media-body">静静看这世界</div>
+							<li class="mui-table-view-cell">
+								<a class="mui-navigate-right">
+									Item 3
 								</a>
 							</li>
 						</ul>
 					</div>
 				</div>
+			</aside>
+	<div class="mui-inner-wrap">
+			<header class="mui-bar mui-bar-nav">
+				<a class="mui-icon mui-icon-bars mui-pull-left" id="offCanvasShow"></a>
+				<h1 class="mui-title">商品列表</h1>
+				<a class="mui-icon mui-icon-contact mui-pull-right" id="yonghu"></a>
+			</header>
+		<div id="offCanvasContentScroll" class="mui-content mui-scroll-wrapper">
+			<div class="mui-content" style="background-color:#fff">
+				<h5 style="background-color:#efeff4">慢生活</h5>
+	
+				<div id="slider" class="mui-slider">
+					<div class="mui-slider-group">
+						<div class="mui-slider-item mui-slider-item-duplicate">
+	
+							<ul class="mui-table-view mui-grid-view">
+								<li class="mui-table-view-cell mui-media mui-col-xs-6" id="1" onclick="detail(this.id)">
+									<a href="javascript:;">
+										<img class="mui-media-object" src="../images/shuijiao.jpg">
+										<div class="mui-media-body">幸福就是可以一起睡觉</div>
+									</a>
+								</li>
+								<li class="mui-table-view-cell mui-media mui-col-xs-6" id="2" onclick="detail(this.id)">
+									<a href="javascript:;">
+										<img class="mui-media-object" src="../images/muwu.jpg">
+										<div class="mui-media-body">想要一间这样的木屋，静静的喝咖啡</div>
+									</a>
+								</li>
+								<li class="mui-table-view-cell mui-media mui-col-xs-6" id="3" onclick="detail(this.id)">
+									<a href="javascript:;"><img class="mui-media-object" src="../images/cbd.jpg">
+										<div class="mui-media-body">Color of SIP CBD</div>
+									</a>
+								</li>
+								<li class="mui-table-view-cell mui-media mui-col-xs-6" id="4" onclick="detail(this.id)">
+									<a href="javascript:;">
+										<img class="mui-media-object" src="../images/yuantiao.jpg">
+										<div class="mui-media-body">静静看这世界</div>
+									</a>
+								</li>
+							</ul>
+						</div>
+					</div>
+				</div>
 			</div>
+	
+			<!--底部导航条-->
+			<nav class="mui-bar mui-bar-tab">
+				<a class="mui-tab-item mui-active" href="#tabbar" id="home">
+					<span class="mui-icon mui-icon-home"></span>
+					<span class="mui-tab-label">首页</span>
+				</a>
+				<a class="mui-tab-item" href="#tabbar-with-chat" id="gdslogin">
+					<span class="mui-icon mui-icon-paperplane"></span>
+					<span class="mui-tab-label">商品登陆</span>
+				</a>
+				<a class="mui-tab-item" href="#tabbar-with-contact" id="chats">
+					<span class="mui-icon mui-icon-chatbubble"><span class="mui-badge">9</span></span>
+					<span class="mui-tab-label">聊天</span>
+				</a>
+				<a class="mui-tab-item" href="#tabbar-with-map" id="gdszhuangtai">
+					<span class="mui-icon mui-icon-eye"></span>
+					<span class="mui-tab-label">商品状态</span>
+				</a>
+			</nav>
 		</div>
-
-		<!--底部导航条-->
-		<nav class="mui-bar mui-bar-tab">
-			<a class="mui-tab-item mui-active" href="#tabbar" id="home">
-				<span class="mui-icon mui-icon-home"></span>
-				<span class="mui-tab-label">首页</span>
-			</a>
-			<a class="mui-tab-item" href="#tabbar-with-chat" id="gdslogin">
-				<span class="mui-icon mui-icon-paperplane"></span>
-				<span class="mui-tab-label">商品登陆</span>
-			</a>
-			<a class="mui-tab-item" href="#tabbar-with-contact" id="chats">
-				<span class="mui-icon mui-icon-chatbubble"><span class="mui-badge">9</span></span>
-				<span class="mui-tab-label">聊天</span>
-			</a>
-			<a class="mui-tab-item" href="#tabbar-with-map" id="gdszhuangtai">
-				<span class="mui-icon mui-icon-eye"></span>
-				<span class="mui-tab-label">商品状态</span>
-			</a>
-		</nav>
+		<div class="mui-off-canvas-backdrop"></div>
+	</div>
+</div>
 	</body>
 	<script src="../js/mui.min.js"></script>
 	<script>
@@ -148,6 +208,45 @@
 		    id:'user'
 		  });
 		});
+		/////////////////////////////////侧面滑动/////////////////////////////////////
+		 //侧滑容器父节点
+			var offCanvasWrapper = mui('#offCanvasWrapper');
+			 //主界面容器
+			var offCanvasInner = offCanvasWrapper[0].querySelector('.mui-inner-wrap');
+			 //菜单容器
+			var offCanvasSide = document.getElementById("offCanvasSide");
+			 //移动效果是否为整体移动
+			var moveTogether = false;
+			 //侧滑容器的class列表，增加.mui-slide-in即可实现菜单移动、主界面不动的效果；
+			var classList = offCanvasWrapper[0].classList;
+			 //变换侧滑动画移动效果；
+			 offCanvasSide.classList.remove('mui-transitioning');
+			offCanvasSide.setAttribute('style', '');
+			classList.remove('mui-slide-in');
+			classList.remove('mui-scalable');
+			//<-----此处可切换滑动效果
+			classList.add('mui-slide-in');
+			//------>
+			offCanvasWrapper.offCanvas().refresh();
+			 //主界面‘显示侧滑菜单’按钮的点击事件
+			document.getElementById('offCanvasShow').addEventListener('tap', function() {
+				offCanvasWrapper.offCanvas('show');
+			});
+			 //菜单界面，‘关闭侧滑菜单’按钮的点击事件
+			document.getElementById('offCanvasHide').addEventListener('tap', function() {
+				offCanvasWrapper.offCanvas('close');
+			});
+			 //主界面和侧滑菜单界面均支持区域滚动；
+			mui('#offCanvasSideScroll').scroll();
+			mui('#offCanvasContentScroll').scroll();
+			 //实现ios平台原生侧滑关闭页面；
+			if (mui.os.plus && mui.os.ios) {
+				mui.plusReady(function() { //5+ iOS暂时无法屏蔽popGesture时传递touch事件，故该demo直接屏蔽popGesture功能
+					plus.webview.currentWebview().setStyle({
+						'popGesture': 'none'
+					});
+				});
+			}
 	</script>
 
 </html>
