--- a/app/request.html
+++ b/app/request.html
@@ -78,11 +78,11 @@
 		
 		<!--底部导航条-->
 		<nav class="mui-bar mui-bar-tab">
-			<a class="mui-tab-item mui-active" href="#tabbar" id="home">
+			<a class="mui-tab-item" href="#tabbar" id="home">
 				<span class="mui-icon mui-icon-home"></span>
 				<span class="mui-tab-label">首页</span>
 			</a>
-			<a class="mui-tab-item" href="#tabbar-with-chat" id="gdslogin">
+			<a class="mui-tab-item " href="#tabbar-with-chat" id="gdslogin">
 				<span class="mui-icon mui-icon-paperplane"></span>
 				<span class="mui-tab-label">商品登陆</span>
 			</a>
@@ -90,7 +90,7 @@
 				<span class="mui-icon mui-icon-chatbubble"><span class="mui-badge">9</span></span>
 				<span class="mui-tab-label">聊天</span>
 			</a>
-			<a class="mui-tab-item" href="#tabbar-with-map" id="gdszhuangtai">
+			<a class="mui-tab-item mui-active" href="#tabbar-with-map" id="gdszhuangtai">
 				<span class="mui-icon mui-icon-eye"></span>
 				<span class="mui-tab-label">商品状态</span>
 			</a>
