--- a/app/index-menu.html
+++ b/app/index-menu.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no">
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-status-bar-style" content="black">
-		<link rel="stylesheet" href="css/mui.min.css">
+		<link rel="stylesheet" href="../css/mui.min.css">
 		<style type="text/css">
 			body,.mui-content{
 			  	background-color: #333;
@@ -70,7 +70,7 @@
 				</li>
 			</ul>
 		</div>
-		<script src="js/mui.min.js"></script>
+		<script src="../js/mui.min.js"></script>
 		<script type="text/javascript" charset="utf-8">
 			var aniShow = "slide-in-right";
 			//关于backbutton和menubutton两个按键的说明，在iOS平台不存在，故需隐藏
