--- a/app/main.html
+++ b/app/main.html
@@ -65,6 +65,49 @@
 		</nav>
 		<script src="../js/mui.min.js"></script>
 		<script>
+			mui.plusReady(function() {
+			//读取本地存储，检查是否为首次启动
+			var showGuide = plus.storage.getItem("lauchFlag");
+			//仅支持竖屏显示
+			plus.screen.lockOrientation("portrait-primary");
+			if(showGuide) {
+				//有值，说明已经显示过了，无需显示；
+				//关闭splash页面；
+				plus.navigator.closeSplashscreen();
+				plus.navigator.setFullscreen(false);
+				//读取本地存储，检查是否已经登录
+				var isLogin = plus.storage.getItem("loginFlag");
+				if(isLogin) {
+					//预加载
+					//preload();
+				} else {
+					mui.openWindow({
+						id: 'login',
+						url: 'login/login.html'
+					});
+				}
+			} else {
+				//显示启动导航
+				mui.openWindow({
+					id: 'guide',
+					url: 'guide.html',
+					styles: {
+						popGesture: "none"
+					},
+					show: {
+						aniShow: 'none'
+					},
+					waiting: {
+						autoShow: false
+					}
+				});
+				//延迟的原因：优先打开启动导航页面，避免资源争夺
+				setTimeout(function() {
+					//预加载
+					//preload();
+				}, 200);
+			}
+		});
 			var aniShow = "pop-in";
 			 //只有ios支持的功能需要在Android平台隐藏；
 			if (mui.os.android) {
