--- a/app/guide.html
+++ b/app/guide.html
@@ -248,7 +248,7 @@
 			document.getElementById("close").addEventListener('tap', function(event) {
 				plus.storage.setItem("lauchFlag", "true");
 				plus.navigator.setFullscreen(false);
-				plus.webview.currentWebview().close();
+				mui.openWindow('../login/login.html','login',{});
 			}, false);
 			//图片切换时，触发动画
 			document.querySelector('.mui-slider').addEventListener('slide', function(event) {
