--- a/app/exhibit.html
+++ b/app/exhibit.html
@@ -29,7 +29,7 @@
 
 	<body>
 		<header class="mui-bar mui-bar-nav">
-		    <a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
+		    <!--<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>-->
 		    <h1 class="mui-title">商品登陆</h1>
 		</header>
 		<!--说明图片-->
@@ -58,73 +58,31 @@
 		
 		
 		<!--底部导航条-->
-		<nav class="mui-bar mui-bar-tab">
-			<a class="mui-tab-item" href="#tabbar" id="home">
-				<span class="mui-icon mui-icon-home"></span>
-				<span class="mui-tab-label">首页</span>
-			</a>
-			<a class="mui-tab-item mui-active" href="#tabbar-with-chat" id="gdslogin">
-				<span class="mui-icon mui-icon-paperplane"></span>
-				<span class="mui-tab-label">商品登陆</span>
-			</a>
-			<a class="mui-tab-item" href="#tabbar-with-contact" id="chats">
-				<span class="mui-icon mui-icon-chatbubble"><span class="mui-badge">9</span></span>
-				<span class="mui-tab-label">聊天</span>
-			</a>
-			<a class="mui-tab-item" href="#tabbar-with-map" id="gdszhuangtai">
-				<span class="mui-icon mui-icon-eye"></span>
-				<span class="mui-tab-label">商品状态</span>
-			</a>
-		</nav>
+		<!--<nav class="mui-bar mui-bar-tab">
+				<a class="mui-tab-item mui-active" href="index.html" id="home">
+					<span class="mui-icon mui-icon-home"></span>
+					<span class="mui-tab-label">首页</span>
+				</a>
+				<a class="mui-tab-item" href="exhibit.html" id="gdslogin">
+					<span class="mui-icon mui-icon-paperplane"></span>
+					<span class="mui-tab-label">商品登陆</span>
+				</a>
+				<a class="mui-tab-item" href="chatView.html" id="chats">
+					<span class="mui-icon mui-icon-chatbubble"><span class="mui-badge">9</span></span>
+					<span class="mui-tab-label">聊天</span>
+				</a>
+				<a class="mui-tab-item" href="request.html" id="gdszhuangtai">
+					<span class="mui-icon mui-icon-eye"></span>
+					<span class="mui-tab-label">商品状态</span>
+				</a>
+			</nav>-->
 	</body>
 	<script src="../js/mui.min.js"></script>
+	<!--<script src="footer.js"></script>-->
 	<script>
 	mui.init( {
 		swipeBack: true //启用右滑关闭功能
-	}
-	
-	);
-	//首页
-	document.getElementById('home').addEventListener('tap', function() {
-		//打开关于页面
-		mui.openWindow( {
-			url: 'main.html', id: 'main',
-		}
-		);
-	}
-	
-	);
-	//商品登陆
-	document.getElementById('gdslogin').addEventListener('tap', function() {
-		//打开关于页面
-		mui.openWindow( {
-			url: 'exhibit.html', id: 'exhibit',
-		}
-		);
-	}
-	
-	);
-	//聊天
-	document.getElementById('chats').addEventListener('tap', function() {
-		//打开关于页面
-		mui.openWindow( {
-			url: 'chatView.html', id: 'chatView',
-		}
-		);
-	}
-	
-	);
-	//商品状态
-	document.getElementById('gdszhuangtai').addEventListener('tap', function() {
-		//打开关于页面
-		mui.openWindow( {
-			url: 'request.html', id: 'request',
-		}
-		);
-	}
-	
-	);
-	
+	});
 	//更换头像
 			mui(".mui-table-view-cell").on("tap", "#head", function(e) {
 				if(mui.os.plus){
