--- a/app/main.html
+++ b/app/main.html
@@ -1,317 +1,238 @@
 <!DOCTYPE html>
 <html>
+
 	<head>
 		<meta charset="utf-8">
 		<title>Hello MUI</title>
-		<meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1, user-scalable=no">
+		<meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1,user-scalable=no">
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-status-bar-style" content="black">
+
+		<!--标准mui.css-->
 		<link rel="stylesheet" href="../css/mui.min.css">
-		<style type="text/css">
-			#list {
-				/*避免导航边框和列表背景边框重叠，看起来像两条边框似得；*/
-				margin-top: -1px;
+		<!--App自定义的css-->
+		<!--<link rel="stylesheet" type="text/css" href="../css/app.css"/>-->
+		<style>
+			h5 {
+				padding-top: 8px;
+				padding-bottom: 8px;
+				text-indent: 12px;
+			}
+			
+			.mui-table-view.mui-grid-view .mui-table-view-cell .mui-media-body {
+				font-size: 15px;
+				margin-top: 8px;
+				color: #333;
+			}
+			/*侧滑的式样*/
+			
+			p {
+				text-indent: 22px;
+			}
+			
+			.mui-off-canvas-left {
+				color: #fff;
+			}
+			
+			.title {
+				margin: 35px 15px 10px;
+			}
+			
+			.title+.content {
+				margin: 10px 15px 35px;
+				color: #bbb;
+				text-indent: 1em;
+				font-size: 14px;
+				line-height: 24px;
 			}
 		</style>
 	</head>
+
 	<body>
-		<div class="mui-content">
-			<ul id="list" class="mui-table-view mui-grid-view">
-				<li class="mui-table-view-cell mui-media mui-col-xs-6">
-					<a href="detail.html?id=4">
-						<img class="mui-media-object" src="../images/shuijiao.jpg">
-						<div class="mui-media-body">幸福就是可以一起睡觉</div>
-					</a>
-				</li>
-				<li class="mui-table-view-cell mui-media mui-col-xs-6">
-					<a href="detail.html?id=3">
-						<img class="mui-media-object" src="../images/muwu.jpg">
-						<div class="mui-media-body">想要一间这样的木屋，静静的喝咖啡</div>
-					</a>
-				</li>
-				<li class="mui-table-view-cell mui-media mui-col-xs-6" id="3">
-					<a href="detail.html?id=2"><img class="mui-media-object" src="../images/cbd.jpg">
-						<div class="mui-media-body">Color of SIP CBD</div>
-					</a>
-				</li>
-				<li class="mui-table-view-cell mui-media mui-col-xs-6" id="4">
-					<a href="detail.html?id=1">
-						<img class="mui-media-object" src="../images/yuantiao.jpg">
-						<div class="mui-media-body">静静看这世界</div>
-					</a>
-				</li>
-			</ul>
+		<div id="offCanvasWrapper" class="mui-off-canvas-wrap mui-draggable">
+			<!--侧滑菜单部分-->
+			<aside id="offCanvasSide" class="mui-off-canvas-left">
+				<div id="offCanvasSideScroll" class="mui-scroll-wrapper">
+					<div class="mui-scroll">
+						<div class="title">侧滑导航</div>
+						<div class="content">
+							这是可拖动式侧滑菜单示例，你可以在这里放置任何内容；关闭侧滑菜单有多种方式： 1.在手机屏幕任意位置向左拖动(drag)；2.点击本侧滑菜单页之外的任意位置; 3.点击如下红色按钮
+							<span class="android-only">；4.Android手机按back键；5.Android手机按menu键
+							</span>。
+							<p style="margin: 10px 15px;">
+								<button id="offCanvasHide" type="button" class="mui-btn mui-btn-danger mui-btn-block" style="padding: 5px 20px;">关闭侧滑菜单</button>
+							</p>
+
+						</div>
+						<div class="title" style="margin-bottom: 25px;">侧滑列表示例</div>
+						<ul class="mui-table-view mui-table-view-chevron mui-table-view-inverted">
+							<li class="mui-table-view-cell">
+								<a class="mui-navigate-right">
+									Item 1
+								</a>
+							</li>
+							<li class="mui-table-view-cell">
+								<a class="mui-navigate-right">
+									Item 2
+								</a>
+							</li>
+							<li class="mui-table-view-cell">
+								<a class="mui-navigate-right">
+									Item 3
+								</a>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</aside>
+			<div class="mui-inner-wrap">
+				<header class="mui-bar mui-bar-nav">
+					<a class="mui-icon mui-icon-bars mui-pull-left" id="offCanvasShow"></a>
+					<h1 class="mui-title">商品列表</h1>
+					<a class="mui-icon mui-icon-contact mui-pull-right" id="yonghu"></a>
+				</header>
+				<div id="offCanvasContentScroll" class="mui-content mui-scroll-wrapper">
+					<div class="mui-content" style="background-color:#fff">
+						<h5 style="background-color:#efeff4">慢生活</h5>
+
+						<div id="slider" class="mui-slider">
+							<div class="mui-slider-group">
+								<div class="mui-slider-item mui-slider-item-duplicate">
+
+									<ul class="mui-table-view mui-grid-view">
+										<li class="mui-table-view-cell mui-media mui-col-xs-6">
+											<a href="javascript:;" id="xiangqing">
+												<img class="mui-media-object" src="../images/shuijiao.jpg">
+												<div class="mui-media-body">幸福就是可以一起睡觉</div>
+											</a>
+										</li>
+										<li class="mui-table-view-cell mui-media mui-col-xs-6" id="2" onclick="detail(this.id)">
+											<a href="javascript:;">
+												<img class="mui-media-object" src="../images/muwu.jpg">
+												<div class="mui-media-body">想要一间这样的木屋，静静的喝咖啡</div>
+											</a>
+										</li>
+										<li class="mui-table-view-cell mui-media mui-col-xs-6" id="3" onclick="detail(this.id)">
+											<a href="javascript:;"><img class="mui-media-object" src="../images/cbd.jpg">
+												<div class="mui-media-body">Color of SIP CBD</div>
+											</a>
+										</li>
+										<li class="mui-table-view-cell mui-media mui-col-xs-6" id="4" onclick="detail(this.id)">
+											<a href="javascript:;">
+												<img class="mui-media-object" src="../images/yuantiao.jpg">
+												<div class="mui-media-body">静静看这世界</div>
+											</a>
+										</li>
+									</ul>
+								</div>
+							</div>
+						</div>
+					</div>
+
+					<!--底部导航条-->
+					<!--<nav class="mui-bar mui-bar-tab">
+				<a class="mui-tab-item mui-active" href="index.html" id="home">
+					<span class="mui-icon mui-icon-home"></span>
+					<span class="mui-tab-label">首页</span>
+				</a>
+				<a class="mui-tab-item" href="exhibit.html" id="gdslogin">
+					<span class="mui-icon mui-icon-paperplane"></span>
+					<span class="mui-tab-label">商品登陆</span>
+				</a>
+				<a class="mui-tab-item" href="chatView.html" id="chats">
+					<span class="mui-icon mui-icon-chatbubble"><span class="mui-badge">9</span></span>
+					<span class="mui-tab-label">聊天</span>
+				</a>
+				<a class="mui-tab-item" href="request.html" id="gdszhuangtai">
+					<span class="mui-icon mui-icon-eye"></span>
+					<span class="mui-tab-label">商品状态</span>
+				</a>
+			</nav>-->
+				</div>
+				<div class="mui-off-canvas-backdrop"></div>
+			</div>
 		</div>
-		<!--底部导航条-->
-		<nav class="mui-bar mui-bar-tab">
-			<a class="mui-tab-item mui-active" href="#tabbar" id="home">
-				<span class="mui-icon mui-icon-home"></span>
-				<span class="mui-tab-label">首页</span>
-			</a>
-			<a class="mui-tab-item" href="#tabbar-with-chat" id="gdslogin">
-				<span class="mui-icon mui-icon-paperplane"></span>
-				<span class="mui-tab-label">商品登陆</span>
-			</a>
-			<a class="mui-tab-item" href="#tabbar-with-contact" id="chats">
-				<span class="mui-icon mui-icon-chatbubble"><span class="mui-badge">9</span></span>
-				<span class="mui-tab-label">聊天</span>
-			</a>
-			<a class="mui-tab-item" href="#tabbar-with-map" id="gdszhuangtai">
-				<span class="mui-icon mui-icon-eye"></span>
-				<span class="mui-tab-label">商品状态</span>
-			</a>
-		</nav>
-		<script src="../js/mui.min.js"></script>
-		<script>
-			mui.plusReady(function() {
-				//读取本地存储，检查是否为首次启动
-				var showGuide = plus.storage.getItem("lauchFlag");
-				if(showGuide) {
-					//有值，说明已经显示过了，无需显示；
-					//关闭splash页面；
-					plus.navigator.closeSplashscreen();
-					plus.navigator.setFullscreen(false);
-					var isLogin = plus.storage.getItem("loginFlag");
-					console.log("value of isLogin is " + isLogin);
-					if (!isLogin) {
-						mui.openWindow('../login/login.html','login',{});
-					} else {
-						initTemplates();
-						preload();
-					}
-				} else {
-					//显示启动导航
-					mui.openWindow({
-						id: 'guide',
-						url: 'guide.html',
-						show: {
-							aniShow: 'none'
-						},
-						waiting: {
-							autoShow: false
-						}
-					});
-					//延迟的原因：优先打开启动导航页面，避免资源争夺
-					setTimeout(function() {
-						//初始化模板
-						initTemplates();
-						//预加载
-						preload();
-					}, 200);
-				}
-			});
-			var aniShow = "pop-in";
-			//只有ios支持的功能需要在Android平台隐藏；
-			if(mui.os.android) {
-				var list = document.querySelectorAll('.ios-only');
-				if(list) {
-					for(var i = 0; i < list.length; i++) {
-						list[i].style.display = 'none';
-					}
-				}
-				//Android平台暂时使用slide-in-right动画
-				if(parseFloat(mui.os.version) < 4.4) {
-					aniShow = "slide-in-right";
-				}
-			}
-			//初始化，并预加载webview模式的选项卡	
-			function preload() {
-				mui.preload({
-					url: 'tab-webview-main.html',
-					styles: {
-						popGesture: 'hide'
-					}
-				});
-			}
-			var templates = {};
-			var getTemplate = function(name, header, content) {
-				var template = templates[name];
-				if(!template) {
-					//预加载共用父模板；
-					var headerWebview = mui.preload({
-						url: header,
-						id: name + "-main",
-						styles: {
-							popGesture: "hide",
-						},
-						extras: {
-							mType: 'main'
-						}
-					});
-					//预加载共用子webview
-					var subWebview = mui.preload({
-						url: !content ? "" : content,
-						id: name + "-sub",
-						styles: {
-							top: '45px',
-							bottom: '0px',
-						},
-						extras: {
-							mType: 'sub'
-						}
-					});
-					subWebview.addEventListener('titleUpdate', function() {
-						setTimeout(function() {
-							subWebview.show();
-						}, 50);
-					});
-					subWebview.hide();
-					headerWebview.append(subWebview);
-					//iOS平台支持侧滑关闭，父窗体侧滑隐藏后，同时需要隐藏子窗体；
-					if(mui.os.ios) { //5+父窗体隐藏，子窗体还可以看到？不符合逻辑吧？
-						headerWebview.addEventListener('hide', function() {
-							subWebview.hide("none");
-						});
-					}
-					templates[name] = template = {
-						name: name,
-						header: headerWebview,
-						content: subWebview,
-					};
-				}
-				return template;
-			};
-			var initTemplates = function() {
-				getTemplate('default', 'template.html');
-			};
-			//主列表点击事件
-			mui('#list').on('tap', 'a', function() {
-				var id = this.getAttribute('href');
-				var href = this.href;
-				var type = this.getAttribute("open-type");
-				//不使用父子模板方案的页面
-				if(type == "common") {
-					var webview_style = {
-						popGesture: "close"
-					};
-					//侧滑菜单需动态控制一下zindex值；
-					if(~id.indexOf('offcanvas-')) {
-						webview_style.zindex = 9998;
-						webview_style.popGesture = ~id.indexOf('offcanvas-with-right') ? "close" : "none";
-					}
-					//图标界面需要启动硬件加速
-					if(~id.indexOf('icons.html')) {
-						webview_style.hardwareAccelerated = true;
-					}
-					mui.openWindow({
-						id: id,
-						url: this.href,
-						styles: webview_style,
-						show: {
-							aniShow: aniShow
-						},
-						waiting: {
-							autoShow: false
-						}
-					});
-				} else if(id && ~id.indexOf('.html')) {
-					if(!mui.os.plus || (!~id.indexOf('popovers.html') && mui.os.ios)) {
-						mui.openWindow({
-							id: id,
-							url: this.href,
-							styles: {
-								popGesture: 'close'
-							},
-							show: {
-								aniShow: aniShow
-							},
-							waiting: {
-								autoShow: false
-							}
-						});
-					} else {
-						//TODO  by chb 当初这么设计，是为了一个App中有多个模板，目前仅有一个模板的情况下，实际上无需这么复杂
-						//使用父子模板方案打开的页面
-						//获得共用模板组
-						var template = getTemplate('default');
-						//判断是否显示右上角menu图标；
-						var showMenu = ~href.indexOf('popovers.html') ? true : false;
-						//获得共用父模板
-						var headerWebview = template.header;
-						//获得共用子webview
-						var contentWebview = template.content;
-						var title = this.innerText.trim();
-						//通知模板修改标题，并显示隐藏右上角图标；
-						mui.fire(headerWebview, 'updateHeader', {
-							title: title,
-							showMenu: showMenu,
-							target: href,
-							aniShow: aniShow
-						});
-
-						if(mui.os.ios || (mui.os.android && parseFloat(mui.os.version) < 4.4)) {
-							var reload = true;
-							if(!template.loaded) {
-								if(contentWebview.getURL() != this.href) {
-									contentWebview.loadURL(this.href);
-								} else {
-									reload = false;
-								}
-							} else {
-								reload = false;
-							}
-							(!reload) && contentWebview.show();
-
-							headerWebview.show(aniShow, 150);
-						}
-					}
-				}
-			});
-			var index = null; //主页面
-			function openMenu() {
-				!index && (index = mui.currentWebview.parent());
-				mui.fire(index, "menu:open");
-			}
-			//在android4.4.2中的swipe事件，需要preventDefault一下，否则触发不正常
-			window.addEventListener('dragstart', function(e) {
-				mui.gestures.touch.lockDirection = true; //锁定方向
-				mui.gestures.touch.startDirection = e.detail.direction;
-			});
-			window.addEventListener('dragright', function(e) {
-				if(!mui.isScrolling) {
-					e.detail.gesture.preventDefault();
-				}
-			});
-			//监听右滑事件，若侧滑菜单未显示，右滑要显示菜单；
-			window.addEventListener("swiperight", function(e) {
-				//默认滑动角度在-45度到45度之间，都会触发右滑菜单，为避免误操作，可自定义限制滑动角度；
-				if(Math.abs(e.detail.angle) < 4) {
-					openMenu();
-				}
-			});
-			//首页
-			document.getElementById('home').addEventListener('tap', function() {
-				//打开关于页面
-				mui.openWindow({
-					url: 'main.html',
-					id: 'main',
-				});
-			});
-			//商品登陆
-			document.getElementById('gdslogin').addEventListener('tap', function() {
-				//打开关于页面
-				mui.openWindow({
-					url: 'exhibit.html',
-					id: 'exhibit',
-				});
-			});
-			//聊天
-			document.getElementById('chats').addEventListener('tap', function() {
-				//打开关于页面
-				mui.openWindow({
-					url: 'chatView.html',
-					id: 'chatView',
-				});
-			});
-			//商品状态
-			document.getElementById('gdszhuangtai').addEventListener('tap', function() {
-				//打开关于页面
-				mui.openWindow({
-					url: 'request.html',
-					id: 'request',
-				});
-			});
-		</script>
 	</body>
+	<script src="../js/mui.min.js"></script>
+	<!--<script src="footer.js"></script>-->
+	<script>
+		mui.init({
+			swipeBack: true //启用右滑关闭功能
+		});
+		//详情页面
+		/*function detail(did){
+					//alert(did);
+					mui.openWindow({
+				    url: 'detail.html',
+				    id:'detail',
+				    show: {
+		                    autoShow: false
+		                },
+				    extras:{
+				      tagertid:did//自定义扩展参数，可以用来处理页面间传值
+				    }
+				  });
+				}*/
+		document.getElementById('xiangqing').addEventListener('tap', function() {
+			//打开关于页面
+			mui.openWindow({
+				url: 'detail.html',
+				id: 'detail',
+				show: {
+					autoShow: false
+				},
+				extras: {
+					tagertid: "1" //自定义扩展参数，可以用来处理页面间传值
+				}
+			});
+		});
+		//用户页面
+		document.getElementById('yonghu').addEventListener('tap', function() {
+			//打开关于页面
+			mui.openWindow({
+				url: 'user.html',
+				id: 'user'
+			});
+		});
+		/////////////////////////////////侧面滑动/////////////////////////////////////
+		//侧滑容器父节点
+		var offCanvasWrapper = mui('#offCanvasWrapper');
+		//主界面容器
+		var offCanvasInner = offCanvasWrapper[0].querySelector('.mui-inner-wrap');
+		//菜单容器
+		var offCanvasSide = document.getElementById("offCanvasSide");
+		//移动效果是否为整体移动
+		var moveTogether = false;
+		//侧滑容器的class列表，增加.mui-slide-in即可实现菜单移动、主界面不动的效果；
+		var classList = offCanvasWrapper[0].classList;
+		//变换侧滑动画移动效果；
+		offCanvasSide.classList.remove('mui-transitioning');
+		offCanvasSide.setAttribute('style', '');
+		classList.remove('mui-slide-in');
+		classList.remove('mui-scalable');
+		//<-----此处可切换滑动效果
+		classList.add('mui-slide-in');
+		//------>
+		offCanvasWrapper.offCanvas().refresh();
+		//主界面‘显示侧滑菜单’按钮的点击事件
+		document.getElementById('offCanvasShow').addEventListener('tap', function() {
+			offCanvasWrapper.offCanvas('show');
+		});
+		//菜单界面，‘关闭侧滑菜单’按钮的点击事件
+		document.getElementById('offCanvasHide').addEventListener('tap', function() {
+			offCanvasWrapper.offCanvas('close');
+		});
+		//主界面和侧滑菜单界面均支持区域滚动；
+		mui('#offCanvasSideScroll').scroll();
+		mui('#offCanvasContentScroll').scroll();
+		//实现ios平台原生侧滑关闭页面；
+		if(mui.os.plus && mui.os.ios) {
+			mui.plusReady(function() { //5+ iOS暂时无法屏蔽popGesture时传递touch事件，故该demo直接屏蔽popGesture功能
+				plus.webview.currentWebview().setStyle({
+					'popGesture': 'none'
+				});
+			});
+		}
+	</script>
 
 </html>
