--- a/app/request.html
+++ b/app/request.html
@@ -16,7 +16,7 @@
 
 	<body>
 		<header class="mui-bar mui-bar-nav">
-			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
+			<!--<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>-->
 			<h1 class="mui-title">出品状况</h1>
 		</header>
 		<div class="mui-content">
@@ -29,7 +29,7 @@
 				</li>
 			</ul>
 		</div>
-		<div id="slider" class="mui-slider" >
+		<div id="slider" class="mui-slider">
 			<div class="mui-slider-group mui-slider-loop">
 				<!-- 额外增加的一个节点(循环轮播：第一个节点是最后一张轮播) -->
 				<div class="mui-slider-item mui-slider-item-duplicate">
@@ -75,9 +75,9 @@
 				<div class="mui-indicator"></div>
 			</div>
 		</div>
-		
+
 		<!--底部导航条-->
-		<nav class="mui-bar mui-bar-tab">
+		<!--<nav class="mui-bar mui-bar-tab">
 			<a class="mui-tab-item" href="#tabbar" id="home">
 				<span class="mui-icon mui-icon-home"></span>
 				<span class="mui-tab-label">首页</span>
@@ -95,15 +95,15 @@
 				<span class="mui-tab-label">商品状态</span>
 			</a>
 		</nav>
-		
+		-->
 		<script src="../js/mui.min.js"></script>
 		<script type="text/javascript" charset="utf-8">
 			mui.init({
-				swipeBack:true //启用右滑关闭功能
+				swipeBack: true //启用右滑关闭功能
 			});
 			var slider = mui("#slider");
 			document.getElementById("switch").addEventListener('toggle', function(e) {
-				if (e.detail.isActive) {
+				if(e.detail.isActive) {
 					slider.slider({
 						interval: 5000
 					});
@@ -113,38 +113,38 @@
 					});
 				}
 			});
-			//首页
-		document.getElementById('home').addEventListener('tap',function(){
-			//打开关于页面
-		  mui.openWindow({
-		    url: 'main.html',
-		    id:'main',
-		  });
-		});
-		//商品登陆
-		document.getElementById('gdslogin').addEventListener('tap',function(){
-			//打开关于页面
-		  mui.openWindow({
-		    url: 'exhibit.html',
-		    id:'exhibit',
-		  });
-		});
-		//聊天
-		document.getElementById('chats').addEventListener('tap',function(){
-			//打开关于页面
-		  mui.openWindow({
-		    url: 'chatView.html',
-		    id:'chatView',
-		  });
-		});
-		//商品状态
-		document.getElementById('gdszhuangtai').addEventListener('tap',function(){
-			//打开关于页面
-		  mui.openWindow({
-		    url: 'request.html',
-		    id:'request',
-		  });
-		});
+			//			//首页
+			//		document.getElementById('home').addEventListener('tap',function(){
+			//			//打开关于页面
+			//		  mui.openWindow({
+			//		    url: 'index.html',
+			//		    id:'index',
+			//		  });
+			//		});
+			//		//商品登陆
+			//		document.getElementById('gdslogin').addEventListener('tap',function(){
+			//			//打开关于页面
+			//		  mui.openWindow({
+			//		    url: 'exhibit.html',
+			//		    id:'exhibit',
+			//		  });
+			//		});
+			//		//聊天
+			//		document.getElementById('chats').addEventListener('tap',function(){
+			//			//打开关于页面
+			//		  mui.openWindow({
+			//		    url: 'chatView.html',
+			//		    id:'chatView',
+			//		  });
+			//		});
+			//		//商品状态
+			//		document.getElementById('gdszhuangtai').addEventListener('tap',function(){
+			//			//打开关于页面
+			//		  mui.openWindow({
+			//		    url: 'request.html',
+			//		    id:'request',
+			//		  });
+			//		});
 		</script>
 	</body>
 
