--- a/app/index.html
+++ b/app/index.html
@@ -54,6 +54,16 @@
 
 			//创建子页面，首个选项卡页面显示，其它均隐藏；
 			mui.plusReady(function() {
+				var showGuide = plus.storage.getItem("lauchFlag");
+				console.log("showGuide is " + showGuide);
+				if (showGuide) {
+					
+				} else{
+					mui.openWindow({
+						url:　'guide.html',
+						id: 'guide'
+					});
+				}
 				var self = plus.webview.currentWebview();
 				for(var i = 0; i < 4; i++) {
 					var temp = {};
