修改文件名

--- a/login.html
+++ b/login.html
@@ -135,8 +135,8 @@
 					var settings = app.getSettings();
 					var state = app.getState();
 					var mainPage = $.preload({
-						"id": 'tab-webview-main',
-						"url": 'tab-webview-main.html'
+						"id": 'main',
+						"url": 'main.html'
 					});
 					var main_loaded_flag = false;
 					mainPage.addEventListener("loaded",function () {
