--- a/main.html
+++ b/main.html
@@ -23,19 +23,19 @@
 			<a class="mui-action-menu mui-icon mui-icon-bars mui-pull-right"></a>
 		</header>
 		<nav class="mui-bar mui-bar-tab">
-			<a id="defaultTab" class="mui-tab-item mui-active" href="tab-webview-subpage-about.html">
+			<a id="defaultTab" class="mui-tab-item mui-active" href="subpage_home.html">
 				<span class="mui-icon mui-icon-home"></span>
 				<span class="mui-tab-label">首页</span>
 			</a>
-			<a class="mui-tab-item" href="tab-webview-subpage-chat.html">
+			<a class="mui-tab-item" href="subpage_product_login.html">
 				<span class="mui-icon mui-icon-paperplane"></span>
 				<span class="mui-tab-label">商品登陆</span>
 			</a>
-			<a class="mui-tab-item" href="tab-webview-subpage-contact.html">
+			<a class="mui-tab-item" href="subpage_chat.html">
 				<span class="mui-icon mui-icon-chatbubble"><span class="mui-badge">9</span></span>
 				<span class="mui-tab-label">聊天</span>
 			</a>
-			<a class="mui-tab-item" href="tab-webview-subpage-setting.html">
+			<a class="mui-tab-item" href="subpage_request.html">
 				<span class="mui-icon mui-icon-gear"></span>
 				<span class="mui-tab-label">商品状态</span>
 			</a>
@@ -101,7 +101,7 @@
 					return true;
 				}
 			}
-			var subpages = ['tab-webview-subpage-about.html', 'tab-webview-subpage-chat.html', 'tab-webview-subpage-contact.html', 'tab-webview-subpage-setting.html'];
+			var subpages = ['subpage_home.html', 'subpage_product_login.html', 'subpage_chat.html', 'subpage_request.html'];
 			var subpage_style = {
 				top: '45px',
 				bottom: '51px'
