--- a/main.html
+++ b/main.html
@@ -7,8 +7,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1,user-scalable=no">
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-status-bar-style" content="black">
-
 		<link rel="stylesheet" href="css/mui.min.css">
+		<link rel="stylesheet" href="css/icons-extra.css">
 		<style>
 			html,
 			body {
@@ -19,8 +19,12 @@
 
 	<body>
 		<header class="mui-bar mui-bar-nav">
+			<a class="mui-icon mui-pull-left" id="yonghu">
+						<img src="images/muwu.jpg" style="width: 35px; height: 35px;border-radius: 50%;margin-top: -0.2em;"  />
+			</a>
 			<h1 id="title" class="mui-title">首页</h1>
-			<a class="mui-action-menu mui-icon mui-icon-bars mui-pull-right"></a>
+			<a class="mui-icon-extra mui-icon-extra-notice mui-pull-right" style="margin-top: 0.4em;" id="offCanvasShow"></a>
+			<a class="mui-icon mui-icon-search mui-pull-right" ></a>
 		</header>
 		<nav class="mui-bar mui-bar-tab">
 			<a id="defaultTab" class="mui-tab-item mui-active" href="subpage_home.html">
@@ -31,7 +35,7 @@
 				<span class="mui-icon mui-icon-paperplane"></span>
 				<span class="mui-tab-label">商品登陆</span>
 			</a>
-			<a class="mui-tab-item" href="subpage_chat.html">
+			<a class="mui-tab-item" href="subpage_chat.html" style="display: none;">
 				<span class="mui-icon mui-icon-chatbubble"><span class="mui-badge">9</span></span>
 				<span class="mui-tab-label">聊天</span>
 			</a>
@@ -162,7 +166,7 @@
 				}
 			}
 			
-			document.querySelector(".mui-icon-bars").addEventListener("tap", openMenu);
+			document.querySelector(".mui-icon-extra-notice").addEventListener("tap", openMenu);
 			window.addEventListener("dragright", function(e){
 				e.detail.gesture.preventDefault();
 			});
@@ -237,6 +241,14 @@
 					defaultTab.classList.add('mui-active');
 				}
 			});
+			//用户页面
+		document.getElementById('yonghu').addEventListener('tap', function() {
+			//打开关于页面
+			mui.openWindow({
+				url: 'user.html',
+				id: 'user'
+			});
+		});
 		</script>
 	</body>
 
